--- a/src/package.json
+++ b/src/package.json
@@ -45,6 +45,7 @@
     "framer-motion": "~11.1.1",
     "gsap": "^3.12.5",
     "intl-messageformat": "^10.5.0",
+    "lucide-react": "^0.522.0",
     "next": "14.2.3",
     "next-themes": "^0.2.1",
     "next-translate": "^2.6.2",
